# Connect4Solver

./: .clang-format  .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Info.hpp  Makefile  Node.cpp  Node.hpp  README.md  main.cpp  script.sh
include/: Board.hpp  Common.hpp  Info.hpp  Node.hpp  Pool.hpp  ThreadPool.hpp
scripts/: generate_solvers.sh
source/: Node.cpp  main.cpp
